--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Metanet</title>
+  <title>Style Sphere</title>
   <base href="/">
   <link rel="icon" type="image/png" href="assets/images/logo1.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
